force-app/main/default/objects/Transit_Card_Distribution__c/Transit_Card_Distribution__c.object-meta.xml
<CustomObject>
    <label>Supportive Services Distribution</label>
    <nameField>
        <label>Card Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supportive Services Distributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>