force-app/main/default/objects/Transit_Card_Distribution__c/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <formula>Transit_Card_Inventory__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Card Type</label>
    <type>Text</type>
</CustomField>