force-app/main/default/objects/Transit_Card_Distribution__c/fields/Contract_Link__c.field-meta.xml
<CustomField>
    <fullName>Contract_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Link</label>
    <referenceTo>Contract_Link__c</referenceTo>
    <relationshipLabel>Supportive Services Distributions</relationshipLabel>
    <relationshipName>Supportive_Services_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>