force-app/main/default/objects/Transit_Card_Distribution__c/fields/Date_Distributed__c.field-meta.xml
<CustomField>
    <fullName>Date_Distributed__c</fullName>
    <label>Date Distributed</label>
    <type>Date</type>
</CustomField>