force-app/main/default/objects/Transit_Card_Distribution__c/fields/Distribution_Type__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Type__c</fullName>
    <label>Distribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home and Back (HB)</fullName>
            </value>
            <value>
                <fullName>Work Transportation (WT)</fullName>
            </value>
            <value>
                <fullName>Point of Traction (PT)</fullName>
            </value>
            <value>
                <fullName>Send Out Eligible (SOE)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>