force-app/main/default/objects/Transit_Card_Distribution__c/fields/Flow_Label__c.field-meta.xml
<CustomField>
    <fullName>Flow_Label__c</fullName>
    <formula>&quot;#&quot; + Last_4_of_Card_Number__c + &quot; - &quot; + Transit_Card_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flow Label</label>
    <type>Text</type>
</CustomField>