force-app/main/default/objects/Transit_Card_Distribution__c/fields/Grant_Contract__c.field-meta.xml
<CustomField>
    <fullName>Grant_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Grant billed for this Supportive Services Distribution.</description>
    <label>Grant / Contract</label>
    <referenceTo>Agency_Contract1__c</referenceTo>
    <relationshipLabel>Supportive Services Distributions</relationshipLabel>
    <relationshipName>Supportive_Services_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>