force-app/main/default/objects/Transit_Card_Distribution__c/fields/Inactive_Participant_Check__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Participant_Check__c</fullName>
    <formula>if  (Date_Distributed__c &gt; Participant__r.Inactive_Date__c, &quot;Distribution Error&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactive Participant Check</label>
    <type>Text</type>
</CustomField>