force-app/main/default/objects/Transit_Card_Distribution__c/fields/Last_4_of_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Last_4_of_Card_Number__c</fullName>
    <description>Pulls last 4 of the card number for use in other processes.</description>
    <formula>RIGHT(Name, 4)</formula>
    <label>Last 4 of Card Number</label>
    <type>Text</type>
</CustomField>