force-app/main/default/objects/Transit_Card_Distribution__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <formula>Transit_Card_Inventory__r.Order_Date__c</formula>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>