force-app/main/default/objects/Transit_Card_Distribution__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Participant</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>Case_Record__c.Status__c</field>
            <operation>equals</operation>
            <value>Active, On Hold</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Id</field>
            <operation>equals</operation>
            <value>00ei0000001FFFf</value>
        </filterItems>
        <filterItems>
            <field>Case_Record__c.Inactive_Date__c</field>
            <operation>greaterOrEqual</operation>
            <valueField>Case_Record__c.Date_One_Month_Ago__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case_Record__c</referenceTo>
    <relationshipLabel>Supportive Services Distributions</relationshipLabel>
    <relationshipName>Transit_Card_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>