force-app/main/default/objects/Transit_Card_Distribution__c/fields/Participant_Case_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_Case_Name__c</fullName>
    <formula>Participant__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant Case Name</label>
    <type>Text</type>
</CustomField>