force-app/main/default/objects/Transit_Card_Distribution__c/fields/Participant_ID__c.field-meta.xml
<CustomField>
    <fullName>Participant_ID__c</fullName>
    <formula>Participant__r.Student_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant ID</label>
    <type>Text</type>
</CustomField>