force-app/main/default/objects/Transit_Card_Distribution__c/fields/Related_Signature_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Signature_ID__c</fullName>
    <description>Populated by flow. Records the ID of the signature related to this transit card. Populated by flow.</description>
    <label>Related Signature ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>