force-app/main/default/objects/Transit_Card_Distribution__c/fields/Transit_Card_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Transit_Card_Inventory__c</fullName>
    <label>Supportive Services Inventory</label>
    <referenceTo>Transit_Card_Inventory__c</referenceTo>
    <relationshipLabel>Supportive Services Distributions</relationshipLabel>
    <relationshipName>Transit_Card_Distributions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>