force-app/main/default/objects/Transit_Card_Distribution__c/fields/Transit_Card_Order__c.field-meta.xml
<CustomField>
    <fullName>Transit_Card_Order__c</fullName>
    <formula>Transit_Card_Inventory__r.Transit_Card_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Card Order</label>
    <type>Text</type>
</CustomField>