force-app/main/default/objects/Transit_Card_Distribution__c/fields/Transit_Card_Value__c.field-meta.xml
<CustomField>
    <fullName>Transit_Card_Value__c</fullName>
    <formula>Transit_Card_Inventory__r.Transit_Card_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Card Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>