force-app/main/default/objects/Transit_Card_Distribution__c/fields/Write_Off__c.field-meta.xml
<CustomField>
    <fullName>Write_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Write Off</label>
    <type>Checkbox</type>
</CustomField>