force-app/main/default/objects/Transit_Card_Distribution__c/fields/Write_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Date__c</fullName>
    <label>Write Off Date</label>
    <type>Date</type>
</CustomField>