force-app/main/default/objects/Transit_Card_Distribution__c/fields/Write_Off_Reason__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Reason__c</fullName>
    <label>Distribution or Write Off Note</label>
    <type>TextArea</type>
</CustomField>