force-app/main/default/objects/Transit_Card_Distribution__c/validationRules/Date_Distributed_Before_Order_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Distributed_Before_Order_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Transit_Card_Inventory__r.Order_Date__c &gt; Date_Distributed__c</errorConditionFormula>
    <errorDisplayField>Date_Distributed__c</errorDisplayField>
    <errorMessage>Date Distributed cannot be before Inventory Order Date.</errorMessage>
</ValidationRule>