force-app/main/default/objects/Transit_Card_Distribution__c/validationRules/Participant_Not_Blank_and_Write_Off_True.validationRule-meta.xml
<ValidationRule>
    <fullName>Participant_Not_Blank_and_Write_Off_True</fullName>
    <active>true</active>
    <errorConditionFormula>not(isblank(Participant__c))

&amp;&amp;

Write_Off__c = TRUE</errorConditionFormula>
    <errorMessage>Transit card cannot be written off if distributed to a participant.</errorMessage>
</ValidationRule>