force-app/main/default/objects/Transit_Card_Distribution__c/validationRules/Transit_Card_Number_cannot_be_edited.validationRule-meta.xml
<ValidationRule>
    <fullName>Transit_Card_Number_cannot_be_edited</fullName>
    <active>true</active>
    <errorConditionFormula>ischanged(Name) &amp;&amp; not($Profile.Id = &apos;00ei0000001FFFf&apos;)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Transit Card Number cannot be edited.</errorMessage>
</ValidationRule>