force-app/main/default/objects/Transit_Card_Distribution__c/listViews/Cleanslate_7_Day_2025_03_25.listView-meta.xml
<ListView>
    <fullName>Cleanslate_7_Day_2025_03_25</fullName>
    <columns>NAME</columns>
    <columns>Participant__c</columns>
    <columns>Participant_ID__c</columns>
    <columns>Date_Distributed__c</columns>
    <columns>Distribution_Type__c</columns>
    <columns>Write_Off__c</columns>
    <columns>Write_Off_Date__c</columns>
    <columns>Write_Off_Reason__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Staff__c</columns>
    <columns>Transit_Card_Value__c</columns>
    <columns>Transit_Card_Order__c</columns>
    <columns>Transit_Card_Inventory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Transit_Card_Inventory__c</field>
        <operation>contains</operation>
        <value>1526</value>
    </filters>
    <label>Cleanslate, 7 Day, 2025-03-25</label>
</ListView>