force-app/main/default/objects/Transit_Card_Distribution__c/listViews/Copy_of_Downtown_7_Day_2022_09_08.listView-meta.xml
<ListView>
    <fullName>Copy_of_Downtown_7_Day_2022_09_08</fullName>
    <columns>NAME</columns>
    <columns>Participant__c</columns>
    <columns>Participant_ID__c</columns>
    <columns>Date_Distributed__c</columns>
    <columns>Distribution_Type__c</columns>
    <columns>Write_Off__c</columns>
    <columns>Write_Off_Reason__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Staff__c</columns>
    <columns>Transit_Card_Value__c</columns>
    <columns>Transit_Card_Order__c</columns>
    <columns>Transit_Card_Inventory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Transit_Card_Inventory__c</field>
        <operation>equals</operation>
        <value>Inventory-1292</value>
    </filters>
    <label>Downtown, 7 Day, 2022-09-08</label>
</ListView>