force-app/main/default/objects/Transit_Card_Distribution__c/listViews/Downtown_1_Day_2025_24_25.listView-meta.xml
<ListView>
    <fullName>Downtown_1_Day_2025_24_25</fullName>
    <columns>NAME</columns>
    <columns>Participant__c</columns>
    <columns>Participant_ID__c</columns>
    <columns>Date_Distributed__c</columns>
    <columns>Distribution_Type__c</columns>
    <columns>Write_Off__c</columns>
    <columns>Write_Off_Date__c</columns>
    <columns>Write_Off_Reason__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Staff__c</columns>
    <columns>Transit_Card_Value__c</columns>
    <columns>Transit_Card_Order__c</columns>
    <columns>Transit_Card_Inventory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Transit_Card_Inventory__c</field>
        <operation>contains</operation>
        <value>1515</value>
    </filters>
    <label>Downtown, 1 Day, 2025-02-24</label>
</ListView>